--- a/starter/dog_shelters/templates/shelter_list.html
+++ b/starter/dog_shelters/templates/shelter_list.html
@@ -14,5 +14,9 @@ Shelter list
             </a>
         </div>
     {% endfor %}
+    <br>
+    <div>
+        <a href="{% url 'dog_register' %}">Register a dog available for adoption</a>
+    </div>
 </div>
 {% endblock %}
